--- a/index.html
+++ b/index.html
@@ -431,7 +431,8 @@
 
             <ul class="container-fluid">
                 <li class="row mb-3 colextions-wrapper ms-0">
-                    <img class="col-lg-5 col-md-6 col-sm-12 ps-0 article-img" src="./img/Articles1.webp" alt="Articles">
+                    <img class="col-xl-5 col-lg-4 col-md-6 col-sm-12 ps-0 article-img" src="./img/Articles1.webp"
+                        alt="Articles">
                     <div class="col-lg-6 col-md-4 col-sm-12 p-md-0 p-sm-5">
                         <h3 class="article-title">ROGER DUBUIS. ЧАСТИНА 1</h3>
                         <p class="article-text pe-md-3">Цей чемпіон «гіперхорології» став синонімом надмірності й
@@ -452,7 +453,8 @@
                     </div>
                 </li>
                 <li class="row mb-3 colextions-wrapper ms-0">
-                    <img class="col-lg-5 col-md-6 col-sm-12 ps-0 article-img" src="./img/Articles2.webp" alt="Articles">
+                    <img class="col-xl-5 col-lg-4 col-md-6 col-sm-12 ps-0 article-img" src="./img/Articles2.webp"
+                        alt="Articles">
                     <div class="col-lg-6 col-md-4 col-sm-12 p-md-0 p-sm-5">
                         <h3 class="article-title">ІСТОРІЯ ЛЮКСОВИХ ГОДИННИКІВ. ЧАСТИНА 1</h3>
                         <p class="article-text pe-3">Історія люксових годинників зародилася дуже давно, вона веде відлік
@@ -471,7 +473,8 @@
                     </div>
                 </li>
                 <li class="row colextions-wrapper ms-0">
-                    <img class="col-lg-5 col-md-6 col-sm-12 ps-0 article-img" src="./img/Articles3.webp" alt="Articles">
+                    <img class="col-xl-5 col-lg-4 col-md-6 col-sm-12 ps-0 article-img" src="./img/Articles3.webp"
+                        alt="Articles">
                     <div class="col-lg-6 col-md-4 col-sm-12 p-md-0 p-sm-5">
                         <h3 class="article-title">ВЕЛИКИЙ ТА СМІЛИВИЙ TISSOT PRS 516 CHRONOGRAPH</h3>
                         <p class="article-text pe-3">На початку цього року компанія Tissot оновила модель PRS 516
