--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
 
         <section class="container-fluid old-colection d-flex justify-content-center">
             <div class="row colextions-wrapper m-0">
-                <img class="col-md-5 col-sm-12 p-0" src="./img/old-colection-img.webp" alt="fashion man">
-                <div class="container old-colection-wraper col-md-7">
+                <img class="col-lg-6 col-md-12 col-sm-12 p-0" src="./img/old-colection-img.webp" alt="fashion man">
+                <div class="container old-colection-wraper col-md-6 py-5">
                     <div class="row justify-content-center">
                         <h2 class="section-title">колекція 2018</h2>
                         <p class="old-colection-text p-md-0 p-sm-3 ">Годинники як інструмент визначення часу
