--- a/index.html
+++ b/index.html
@@ -59,14 +59,15 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse col-xl-5 col-lg-3 col-md-9" id="collapsibleNavbar">
-                        <ul class="navbar-nav col-9 justify-content-end d-flex align-items-center">
+                        <ul
+                            class="navbar-nav col-xl-9 col-lg-9 col-md-8 col-sm-12 justify-content-xl-end justify-content-sm-center d-flex align-items-center">
                             <li class="nav-item text-center"><a class="nav-link active" href="#">сподобалось</a>
                             </li>
                             <li class="nav-item text-center"><a class="nav-link" href="#">Особистий кабінет</a></li>
                             <li class="nav-item text-center"><a class="nav-link" href="#">налаштування</a></li>
                         </ul>
 
-                        <div class="container col-3 p-0 d-flex justify-content-xl-center justify-content-md-start">
+                        <div class="container col-xl-3 col-lg-2 col-md-2 col-sm-12 p-0 d-flex justify-content-center">
                             <i class="col-xl-3 col-md-1 bi bi-cart2 align-self-center icon"></i>
                             <i class="col-xl-3 m-0 col-md-1 bi bi-search align-self-center icon"></i>
                         </div>
@@ -111,7 +112,7 @@
 
         <div class="container-fluid">
             <div class="row colextions-wrapper m-0">
-                <section class="container new-seson col-lg-7 col-md-12 col-sm-12">
+                <section class="container new-seson col-xl-7 col-lg-12 col-md-12 col-sm-12">
                     <h2 class="section-title m-0">СЕЗОН 2021/22</h2>
 
                     <div class="container">
@@ -144,7 +145,7 @@
                     </div>
                 </section>
 
-                <section class="container new-colection col-lg-5 col-md-12 col-sm-12 pb-md-5">
+                <section class="container new-colection col-xl-5 col-lg-12 col-md-12 col-sm-12 pb-md-5">
                     <div class="container new-colection-wraper">
                         <h2 class="section-title">Нова колекція</h2>
                         <a class="new-colection-link" href="#">Каталог</a>
@@ -255,7 +256,7 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="d-flex justify-content-center">
-                            <div class="new-product col-sm-6 col-md-3">
+                            <div class="new-product col-sm-6 col-md-3 m-0">
                                 <div class="new-product-img-wrap d-flex">
                                     <img class="new-product-img" src="./img/new-clock2.png" alt="new-clock" width="215"
                                         height="234">
@@ -270,7 +271,7 @@
 
                     <div class="carousel-item">
                         <div class="d-flex justify-content-center">
-                            <div class="new-product col-sm-6 col-md-3">
+                            <div class="new-product col-sm-6 col-md-3 m-0">
                                 <div class="new-product-img-wrap d-flex">
                                     <img class="new-product-img" src="./img/new-clock3.png" alt="new-clock" width="215"
                                         height="234">
@@ -285,7 +286,7 @@
 
                     <div class="carousel-item">
                         <div class="d-flex justify-content-center">
-                            <div class="new-product col-sm-6 col-md-3">
+                            <div class="new-product col-sm-6 col-md-3 m-0">
                                 <div class="new-product-img-wrap d-flex">
                                     <img class="new-product-img" src="./img/new-clock4.png" alt="new-clock" width="215"
                                         height="234">
@@ -300,7 +301,7 @@
 
                     <div class="carousel-item">
                         <div class="d-flex justify-content-center">
-                            <div class="new-product col-sm-6 col-md-3">
+                            <div class="new-product col-sm-6 col-md-3 m-0">
                                 <div class="new-product-img-wrap d-flex">
                                     <img class="new-product-img" src="./img/new-clock5.png" alt="new-clock" width="215"
                                         height="234">
@@ -315,7 +316,7 @@
 
                     <div class="carousel-item">
                         <div class="d-flex justify-content-center">
-                            <div class="new-product col-sm-6 col-md-3">
+                            <div class="new-product col-sm-6 col-md-3 m-0">
                                 <div class="new-product-img-wrap d-flex">
                                     <img class="new-product-img" src="./img/new-clock1.png" alt="new-clock" width="215"
                                         height="234">
@@ -330,7 +331,7 @@
 
                     <div class="carousel-item">
                         <div class="d-flex justify-content-center">
-                            <div class="new-product col-sm-6 col-md-3">
+                            <div class="new-product col-sm-6 col-md-3 m-0">
                                 <div class="new-product-img-wrap d-flex">
                                     <img class="new-product-img" src="./img/new-clock6.png" alt="new-clock" width="215"
                                         height="234">
@@ -345,7 +346,7 @@
 
                     <div class="carousel-item">
                         <div class="d-flex justify-content-center">
-                            <div class="new-product col-sm-6 col-md-3">
+                            <div class="new-product col-sm-6 col-md-3 m-0">
                                 <div class="new-product-img-wrap d-flex">
                                     <img class="new-product-img" src="./img/new-clock7.png" alt="new-clock" width="215"
                                         height="234">
@@ -360,7 +361,7 @@
 
                     <div class="carousel-item">
                         <div class="d-flex justify-content-center">
-                            <div class="new-product last-td col-sm-6 col-md-3">
+                            <div class="new-product last-td col-sm-6 col-md-3 m-0">
                                 <div class="new-product-img-wrap d-flex">
                                     <img class="new-product-img" src="./img/new-clock3.png" alt="new-clock" width="215"
                                         height="234">
